--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Manolo's website
+subtitle: The Cure for Boredom Is Curiosity. There is no cure for curiosity, D. Parker
 use-site-title: true
 ---
 
