--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Manolo's website
+title: Manolo's blog
 subtitle: The Cure for Boredom Is Curiosity. There is no cure for curiosity, D. Parker
 use-site-title: true
 ---
