--- a/_posts/2019-01-30-html-shiny1.html
+++ b/_posts/2019-01-30-html-shiny1.html
@@ -1,4 +1,5 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+
 <p>
   When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
   $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
@@ -8,7 +9,7 @@
 <h2 id="what-is-shiny">What is shiny?</h2>
 <MATH>&int;_a_^b^{f(x)<over>1+x} dx</MATH>
 
-<p><img src="images/shiny-hex.png" height="200px" width="50px" /></p>
+<p><img src="img/shiny-hex.png" height="200px" width="50px" /></p>
 <p>&quot;shiny&quot; is a package used to create interactive dashboards without the necessity to know any HTML, CSS or JavaScript.</p>
 <p>It was developed by Joe Cheng from RStudio.</p>
 <p>Some of the benefits of using shiny are:</p>
@@ -50,11 +51,11 @@
 <p>The UI is responsible for creating specific controls that a user can iteract with, while the server is translating the specific options selected in the ui into an actual plot or data.</p>
 <h2 id="layout-of-a-shiny-application">Layout of a shiny application</h2>
 <div class="figure">
-<img src="images/layout.PNG" />
+<img src="img/layout.PNG" />
 </div>
 <h2 id="basic-widgets-in-shiny">Basic widgets in Shiny</h2>
 <div class="figure">
-<img src="images/basic-widgets.png" />
+<img src="img/basic-widgets.png" />
 </div>
 <h2 id="examples">Examples</h2>
 <p>Now let's explore some of the examples that one can create using shiny:</p>
