--- a/_posts/2019-01-30-html-shiny1.html
+++ b/_posts/2019-01-30-html-shiny1.html
@@ -51,11 +51,11 @@
 <p>The UI is responsible for creating specific controls that a user can iteract with, while the server is translating the specific options selected in the ui into an actual plot or data.</p>
 <h2 id="layout-of-a-shiny-application">Layout of a shiny application</h2>
 <div class="figure">
-<img src="img/layout.PNG" />
+<img src="/img/layout.PNG" />
 </div>
 <h2 id="basic-widgets-in-shiny">Basic widgets in Shiny</h2>
 <div class="figure">
-<img src="img/basic-widgets.png" />
+<img src="/img/basic-widgets.png" />
 </div>
 <h2 id="examples">Examples</h2>
 <p>Now let's explore some of the examples that one can create using shiny:</p>
