--- a/_posts/2019-01-30-html-shiny1.html
+++ b/_posts/2019-01-30-html-shiny1.html
@@ -14,7 +14,7 @@ Here, I am trying to run some formulas:
 
 -->
 
-<p><img src="img/shiny-hex.png" height="200px" width="50px" /></p>
+<p><img src="/img/shiny-hex.png" height="200px" width="50px" /></p>
 <p>&quot;shiny&quot; is a package used to create interactive dashboards without the necessity to know any HTML, CSS or JavaScript.</p>
 <p>It was developed by Joe Cheng from RStudio.</p>
 <p>Some of the benefits of using shiny are:</p>
@@ -82,8 +82,8 @@ runExample(&quot;09_upload&quot;)</code></pre>
 </ol>
 <h2 id="idea">1) Idea:</h2>
 <p>We will create a dashboard that visualizes GDP figures at the national level for all published NAICS (North American Industry Classification) industries.</p>
-<p>Table 3610043401: Gross domestic product (GDP) at basic prices, by industry, monthly (x 1,000,000) 
-  [https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3610043401](https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3610043401)</p>
+<p><a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3610043401">Table 3610043401</a>: Gross domestic product 
+  (GDP) at basic prices, by industry, monthly (x 1,000,000) </p>
  
   
 <h2 id="getting-the-data">2) Getting the data:</h2>
