--- a/_posts/2019-01-30-html-shiny1.html
+++ b/_posts/2019-01-30-html-shiny1.html
@@ -14,7 +14,7 @@ Here, I am trying to run some formulas:
 
 -->
 
-<p><img src="/img/shiny-hex.png" height="200px" width="50px" /></p>
+<p><img src="/img/shiny-hex.png" height="200px" width="200px" /></p>
 <p>&quot;shiny&quot; is a package used to create interactive dashboards without the necessity to know any HTML, CSS or JavaScript.</p>
 <p>It was developed by Joe Cheng from RStudio.</p>
 <p>Some of the benefits of using shiny are:</p>
@@ -72,16 +72,19 @@ runExample(&quot;09_upload&quot;)</code></pre>
 <h2 id="creating-a-shiny-application">Creating a shiny application</h2>
 <p>Steps:</p>
 <ol style="list-style-type: decimal">
-<li>Have an idea on which data we want to use and how we want to present it.</li>
-<li>Get the data (webscraping, accesing a database).</li>
+<li>Have an idea on which data to use and on how to visualize it.</li>
+<li>Get the data (i.e.: API, webscraping, accesing a database).</li>
 <li>Clean the data.</li>
 <li>Create a shiny application.</li>
 <li>Share the application.</li>
 <li>Listen to suggestions from users.</li>
 <li>Improve the application.</li>
 </ol>
+
+
 <h2 id="idea">1) Idea:</h2>
-<p>We will create a dashboard that visualizes GDP figures at the national level for all published NAICS (North American Industry Classification) industries.</p>
+
+<p>Create a dashboard that visualizes GDP figures at the national level for all published NAICS (North American Industry Classification) industries.</p>
 <p><a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3610043401">Table 3610043401</a>: Gross domestic product 
   (GDP) at basic prices, by industry, monthly (x 1,000,000) </p>
  
