--- a/_posts/2019-01-30-How-to-use-shiny html.html
+++ b/_posts/2019-01-30-How-to-use-shiny html.html
@@ -1,4 +1,12 @@
-
+<layout>post</layout>
+	<title>How to use Shiny?</title>
+	<bigimg>/img/path.jpg</bigimg>
+	<author>Manolo Malaver-Vojvodic</author>
+	<author>https://twitter.com/mmala0</author>
+	<author>https://github.com/manolo20/</author>
+	<output>
+		<html_document>default</html_document>
+	</output>
 
 <p><img src="/img/shiny-hex.png" height="200px" width="200px" /></p>
 <p>&quot;shiny&quot; is a package used to create interactive dashboards without the necessity to know any HTML, CSS or JavaScript.</p>
