--- a/_posts/2019-01-30-How-to-use-shiny html.html
+++ b/_posts/2019-01-30-How-to-use-shiny html.html
@@ -1,6 +1,9 @@
 
+
 <body>
-<div class="big-img intro-header" style="background-image: url(&quot;/img/path.jpg&quot;);">
+  <div id="header-big-imgs" data-num-img="1" data-img-src-1="/img/path.jpg"></div>
+
+  <div class="big-img intro-header" style="background-image: url(&quot;/img/path.jpg&quot;);">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
