--- a/_posts/2019-01-30-How-to-use-shiny html.html
+++ b/_posts/2019-01-30-How-to-use-shiny html.html
@@ -5,8 +5,11 @@
 <header class="header-section has-img">
 
 
+<!-- if I use: div clas="intro-header no-img" it will have no image
+ instead I need to use: div clas="intro-header has-img" -->
 
-  <div class="intro-header no-img">
+
+  <div class="big-img intro-header" style="background-image: url("/img/path.jpg");">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
