--- a/_posts/2019-01-30-How-to-use-shiny html.html
+++ b/_posts/2019-01-30-How-to-use-shiny html.html
@@ -1,5 +1,5 @@
 
-<div id="header-big-imgs" data-num-img="1" data-img-src-1="/img/path.jpg"></div>
+<div id="header-big-img" data-num-img="1" data-img-src-1="/img/path.jpg"></div>
 
   <!-- error in line 186 
 <div id="header-big-imgs" data-num-img="1" data-img-src-1="/img/path.jpg"></div>
