--- a/_posts/2019-01-30-How-to-use-shiny html.html
+++ b/_posts/2019-01-30-How-to-use-shiny html.html
@@ -27,7 +27,7 @@
     <span class="img-desc" style="display: none;"></span>
   </div>
 
-  <div class="intro-header no-img">
+  <div class="intro-header has-img">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
